# yama

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO  build.rs  embed_icon.rc
backend/: Cargo.toml
backend/src/: api.rs  backend.rs  config.rs  lib.rs  networking.rs
backend/src/backend/: episode.rs  meta.rs  title.rs  video_metadata.rs
backend/src/networking/: anilist.rs  discord.rs
backend/src/networking/anilist/: query.rs
backend/tests/: backend.rs  tests.rs
bridge/: Cargo.toml
bridge/src/: cache.rs  lib.rs  subscription.rs
docs/: docs.docx
frontend/: Cargo.toml
frontend/src/: config.rs  embedded.rs  frontend.rs  gui_config.rs  keybindings.rs  lib.rs  list.rs  loading.rs  panels.rs  theme.rs  widgets.rs
frontend/src/widgets/: loading.rs  menus.rs  modal.rs  mouse_area.rs  panels.rs  theme.rs
frontend/src/widgets/panels/: inner_data.rs  inner_panel.rs  pointer.rs
mpv_scripts/: save_info.lua
res/: iced.json
scripts/: save_info.lua
src/: backend.rs  frontend.rs  main.rs
src/backup/: frontend.rs
src/frontend/: list.rs  loading.rs  theme.rs
