[package]
name = "yama"
version = "0.7.0"
edition = "2021"
authors = ["Agustin Marcelo Marco Bacigalupo <01marcoagustin@gmail.com>"]
license = "MIT"

[workspace]
members = [
	"backend",
	"bridge",
	"frontend",
]

[dependencies]
confy = { workspace = true }
frontend = { path = "./frontend" }
time = { version = "0.3", features = ["macros"] }
tracing = { workspace = true }
tracing-appender = "0.2.2"
tracing-subscriber = { workspace = true }
tracing-unwrap = { workspace = true }

[workspace.dependencies]
confy = "0.5"
iced = { version = "0.9", features = ["image", "debug", "tokio", "canvas", "svg"] }
once_cell = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
tracing-unwrap = { version = "0.10", default-features = false }

[target.'cfg(windows)'.dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
]

[build-dependencies]
embed-resource = "2.1"

[profile.dev]
opt-level = 1
#panic = 'abort'

[profile.release]
#panic = 'abort'
