[package]
name = "yama"
version = "0.7.1"
edition = "2021"
authors = ["Agustin Marcelo Marco Bacigalupo <01marcoagustin@gmail.com>"]
license = "MIT"

[workspace]
members = ["backend", "bridge", "frontend"]

[dependencies]
anyhow = { workspace = true }
confy = { workspace = true }
frontend = { path = "./frontend" }
once_cell = { workspace = true }
time = { version = "0.3", features = ["macros"] }
tracing = { workspace = true }
tracing-appender = "0.2"
tracing-subscriber = { workspace = true }

[workspace.dependencies]
anyhow = "1.0"
confy = { version = "0.5", features = ["toml_conf"] }
iced = { version = "0.10", features = [
    "image",
    "canvas",
    "svg",
    "tokio",
    "advanced",
] }
once_cell = "1.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }

[target.'cfg(windows)'.dependencies.windows]
version = "0.51"
features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
]

[build-dependencies]
embed-resource = "2.1"

[profile.dev]
opt-level = 1

[profile.release]
strip = true
opt-level = 'z'
lto = true
codegen-units = 1
