[package]
name = "backend"
version = "0.7.0"
edition = "2021"
authors = ["Agustin Marcelo Marco Bacigalupo <01marcoagustin@gmail.com>"]
license = "MIT"

[dependencies]
alphanumeric-sort = "1"
confy = { workspace = true }
ffprobe = "0.3.3"
iced = { workspace = true}
# infer = { version = "0", default-features = false }
once_cell = { workspace = true }
reqwest = { version = "0", features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serial_test = "0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-unwrap = { workspace = true }