[package]
name = "backend"
version = "0.7.0"
edition = "2021"
authors = ["Agustin Marcelo Marco Bacigalupo <01marcoagustin@gmail.com>"]
license = "MIT"

[dependencies]
alphanumeric-sort = "1.5"
anyhow = { workspace = true }
confy = { workspace = true }
ffprobe = "0.3"
iced = { workspace = true }
once_cell = { workspace = true }
reqwest = { version = "0.11", features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { workspace = true }
