[package]
name = "backend"
version = "0.7.1"
edition = "2021"
authors = ["Agustin Marcelo Marco Bacigalupo <01marcoagustin@gmail.com>"]
license = "MIT"

[dependencies]
aho-corasick = "1.0"
alphanumeric-sort = "1.5"
anyhow = { workspace = true }
confy = { workspace = true }
discord-sdk = "0.3"
ffprobe = "0.3"
hyper = { version = "0.14", features = ["client", "http1", "stream"] }
hyper-tls = "0.5.0"
iced = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["fs", "io-util", "macros", "time"] }
tokio-stream = "0.1.14"
tracing = { workspace = true }
