[package]
name = "frontend"
version = "0.6.0"
edition = "2021"
authors = ["Agustin Marcelo Marco Bacigalupo <01marcoagustin@gmail.com>"]
license = "MIT"

[dependencies]
bridge = { path = "../bridge" }
backend = { path = "../backend" }
confy = { workspace = true }
rodio = { version = "0.17", features = ["wav"] }
iced = { workspace = true}
iced_native = "0"
iced_lazy = "0"
once_cell = { workspace = true }
rfd = "0.11"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-unwrap = { workspace = true }
