[package]
name = "frontend"
version = "0.7.0"
edition = "2021"
authors = ["Agustin Marcelo Marco Bacigalupo <01marcoagustin@gmail.com>"]
license = "MIT"

[dependencies]
anyhow = { workspace = true }
backend = { path = "../backend" }
bridge = { path = "../bridge" }
confy = { workspace = true }
iced = { workspace = true}
iced_native = "0.10"
once_cell = { workspace = true }
rfd = "0.11"
tracing = { workspace = true }
